# rich-dictionary-cli

./: CHANGELOG.md  README.md  pyproject.toml
src/rich_dictionary_cli/: cli.py
