[project]
name = "rich-dictionary-cli"
version = "0.1.0"
description = "Command-line tool for looking up English definitions directly in your terminal."
readme = "README.md"
authors = [
    { name = "Jimmy Roth", email = "rootdots@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.20.0",
]

[project.scripts]
rd = "rich_dictionary_cli.cli:cli"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
